        * check for length($oid) instead of defined($oid) in REST->default
        * added CatalystX::CRUD::Results class
        * added naked_results() config option to base Controller
        * refactored base Controller to make all config options into accessors. added t/02-controller
        * change Model::Utils to use req->params rather than param()

0.28    11 Aug 2008
        * API for ModelAdapter changed to pass controller instance in do_model()
        * add get_primary_key() and make_primary_key_string() methods to base Controller. 
          This allows for PKs composed of multiple columns.

0.29    23 Aug 2008
        * fix typos in the Tutorial
        * add relationship methods to Controller, ModelAdapter and Model core API.
        * added sugary alias methods for read(), update() and delete() to match CRUD.
        * refactored REST controller to support related methods and provide better
          HTTP status checks and responses.

0.30    xxx
        * fix uninit value warning in Controller
        * change REST create() : Local to _rest_create() : Path('create') to make it easier for
          create_form() to call create() in superclass.
        * clean up old style $self->config->{value} to instead use $self->value in Controller
        * add app_class() and model_meta() accessors to ModelAdapter 
        * in base Controller, rename view_on_single_result() method to uri_for_view_on_single_result and make
          accessor for the config value 'view_on_single_result'
        * change all reserved param names in Model::Utils to use 'cxc-' prefix instead of '_'. Backwards compat
          is preserved where possible.
        * Model::Utils make_query() will uc() sort direction 
        * change behaviour of get_primary_key() in base Controller to not look in req->params for pk values.
          This allows for changing the PK as part of an update.

